tdf#150317 - Sync visible tab during save process

Change-Id: I188d59e2b5ca7d7d6f92d405b886d3c12420b690
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182698
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>